--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
+    <script src ="./app/locale/Messages.js"></script>
+    <script src ="./app/locale/Messages_en.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
 </head>
